--- a/smartv2-dashboard.yaml
+++ b/smartv2-dashboard.yaml
@@ -7,6 +7,8 @@ esphome:
 
 wifi:
   ap:
-    ssid: "Smartv2 Satellite"
-  ssid: !secret wifi_ssid
-  password: !secret wifi_password
+    ssid: "Smartv2-Satellite"
+    password: "mW9Vf1PmlWBz"
+  networks:
+    - ssid: !secret wifi_ssid
+      password: !secret wifi_password
